# wechat-on-airflow

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  bufferParser.ts  cleanup_logs.sh  docker-compose-airflow.yml  docker-compose-new.yml  docker-compose-nginx-ssl-sg.yml  docker-compose-nginx-ssl.yml  docker-compose-nginx.yml  docker-compose-tennis.yml  docker-compose.sender.yml  docker-compose.yml  git_webhook_server.py  pyproject.toml  readme.md  requirements-sender-agent.txt  requirements.txt  webhook_server.py  未命名绘图.drawio  系统架构图.drawio
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml
archive/paused_non_tennis_dags/: README.md
archive/paused_tennis_dags/: README.md
cloudflare/wechat-worker/: .gitignore  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
config/: active-components.yaml  config-contracts.yaml  runtime-target.yaml
dags/: ai_chat.py  readme.md  test123.py  test_ai_chatbot.py  wcf_callback_watcher.py  wx_msg_watcher copy.py  wx_msg_watcher.py  wxchat_bot.py  wxchat_bot_by_appium.py
dags/ai_agent/: ai_agent_demo.py  ai_vendor_balance_monitor.py  brocad_agent_001.py  dify_agent_001.py  image_agent.py  ragflow_agent_001.py  video_agent.py  zacks_ai_agent.py
dags/ai_tennis/: ai_tennis_video.py  player_traker.py  utils.py
dags/ai_tennis_dags/: ai_tennis_video.py
dags/appium_wx_dags/: wx_account_watcher.py  wx_auto_history_summary.py  wx_chat_history_summary.py  wx_friend_circle.py  wx_history_summary.py  wx_msg_watcher.py  wx_msg_watcher_for_zacks.py  wx_watcher.py
dags/cron/: news_watcher.py
dags/msg_watcher/: wcf_wx_account_watcher.py  wcf_wx_msg_sender.py  wcf_wx_msg_watcher.py  wcf_wx_msg_watcher_for_ai_tennis.py  wx_account_watcher.py
dags/olds/: ai_vendor_balance_monitor.py  image_agent.py  ragflow_agent_001.py  zacks_ai_agent.py
dags/tennis_dags/: news_watcher.py  wx_msg_watcher_for_zacks.py  zacks_phone_reboot_dag.py
dags/tests/: demo_redis.py  demo_wxchat_bot_by_appium.py  tops_watcher_test.py  wxchat_bot_by_appium.py
dags/tool_dags/: db_cleanup.py  github_watcher.py  news_watcher.py
dags/utils/: dify_sdk.py  llm_channl.py  openrouter.py  redis.py  tecent_cos.py  tencent_sms.py  tts.py  wechat_channl.py  (+4 more)
dify_conf/: dify_env  renew_dify_ssl.sh  renew_dify_ssl_02.sh  renew_dify_ssl_tiantian.sh
docs/: fresh-start-rehearsal-2026-07-17.md  migration-rehearsal-2026-07-17.md  production-baseline.md  release-strategy.md  venue-email-notifications.md  wechat-cloudflare-send-service.md  wechat-sender-service.md
gewe_data/: init_gewe.sh  readme.md
nginx/: README.md  start.sh
nginx_for_wcf/: start.sh
olds/: docker-compose.yml  webhook_server.py
scf/: index.py  readme.md
scripts/: _ops.py  airflow_db_cleanup.py  check_active_components.py  check_dag_imports.py  deploy_airflow.py  deploy_check.py  install_wechat_sender.sh  prepare_fresh_start_config.py  production_health.py  rollback_check.py  verify_fresh_start_config.py
sender_agent/: __init__.py  app.py
supabase-sql-storage/: industry.sql  user.sql
tests/: airflow3_compatibility_test.py  ops_scripts_test.py  sender_agent_test.py  tops_watcher_test.py  venue_email_test.py  wechat_send_api_test.py  wechat_sender_test.py  zacks_phone_reboot_test.py
wechat_sender/: __init__.py  appium_text_sender.py
wx_app_by_appium/: wxchat_sdk.py
(+214 files in other folders)
