[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "wechat-on-airflow"
version = "0.1.0"
description = "Airflow workflows for Shenzhen tennis availability notifications."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "claude89757" }]
dependencies = [
  "paramiko==3.5.1",
  "PyYAML==6.0.3",
  "requests==2.34.2",
  "tencentcloud-sdk-python==3.1.134",
]

[project.optional-dependencies]
sender = [
  "Appium-Python-Client==5.3.1",
  "fastapi==0.139.2",
  "pydantic==2.13.4",
  "selenium==4.46.0",
  "uvicorn==0.51.0",
]
dev = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "mypy==1.17.1",
  "pre-commit==4.3.0",
  "pytest==9.0.3",
  "pytest-cov==6.2.1",
  "ruff==0.12.11",
  "types-paramiko==3.5.0.20240928",
  "types-requests==2.32.4.20250809",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wechat_airflow"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["archive", ".worktrees"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "AIR"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["wechat_airflow"]
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["airflow.*", "tencentcloud.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["wechat_airflow"]
branch = true
